<resources>
    <string name="app_name">android-readability-webview</string>
    <string name="readability">Readability</string>
    <string name="loadURLs">Load URLS</string>

    <!-- Name for one of the font options available to use -->
    <string name="mozac_feature_readerview_sans_serif_font">无衬线</string>
    <!-- Accessible description for the font option -->
    <string name="mozac_feature_readerview_sans_serif_font_desc">无衬线字体</string>
    <!-- Name for one of the font options available to use -->
    <string name="mozac_feature_readerview_serif_font">衬线</string>
    <!-- Accessible description for the font option -->
    <string name="mozac_feature_readerview_serif_font_desc">衬线字体</string>

    <!-- Accessible description for decreasing the font size -->
    <string name="mozac_feature_readerview_font_size_decrease_desc">缩小文字 -</string>

    <!-- Accessible description for increasing the font size -->
    <string name="mozac_feature_readerview_font_size_increase_desc">+ 增大文字</string>
    <!-- Color option for the background -->
    <string name="mozac_feature_readerview_dark">深邃</string>
    <!-- Accessible description for the color option -->
    <string name="mozac_feature_readerview_dark_color_scheme_desc">深邃配色</string>
    <!-- Color option for the background -->
    <string name="mozac_feature_readerview_sephia">纸墨</string>
    <!-- Accessible description for the color option -->
    <string name="mozac_feature_readerview_sepia_color_scheme_desc">纸墨配色</string>

    <string name="mozac_feature_readerview_heti">赫蹏</string>

    <!-- Color option for the background -->
    <string name="mozac_feature_readerview_light">明亮</string>
    <!-- Accessible description for the color option -->
    <string name="mozac_feature_readerview_light_color_scheme_desc">明亮配色</string>
</resources>